# osm_client

./: .gitignore  Benchmark Graphs.xlsx  README.md  preprocess.py
OSM Unity Client/Assets/Maps/: tunø.json
OSM Unity Client/Assets/Scenes/: SampleScene.unity
OSM Unity Client/Assets/Scripts/: MapLoader.cs
OSM_Unity_Client/: .gitignore
OSM_Unity_Client/Assets/: CameraControl.cs  GLLineRenderer.cs  Line.mat  packages.config
OSM_Unity_Client/Assets/Maps/: læsø.pre  samsø2.json  tunø.json
OSM_Unity_Client/Assets/Prefabs/: CircleA.prefab  CircleB.prefab  LandmarkSquare.prefab
OSM_Unity_Client/Assets/Scenes/: SampleScene.unity
OSM_Unity_Client/BenchmarkData/: aStar.csv  biAstar.csv  biDijkstra.csv  dijkstra.csv  landmarks.csv  landmarks_300.csv  landmarks_300_random.csv  landmarks_random.csv
OSM_Unity_Client/ProjectSettings/: ProjectSettings.asset  TagManager.asset
maps/: samsø2.json  tunø.json  tunø.osm
rust_osm/: Cargo.toml  node_coordinates_temp.txt  node_distances_temp.txt  nodes_pointing_to_node.txt
rust_osm/src/: main.rs  preprocessor.rs
rust_osm/src/preprocessor/: coord.rs  edge.rs  graph.rs  preprocessor.rs
rust_osm/src/test_data/: andorra.osm.testpbf  andorra_double_cycle.osm.testpbf  double_minimize_problem.osm.testpbf  minimal.osm.testpbf  minimal_ignored_road.osm.testpbf  minimal_twoway.osm.testpbf  minimize_correctly.osm.testpbf  minimize_correctly_cross.osm.testpbf  minimize_example.osm.testpbf  one_node_is_dropped.osm.testpbf  one_way_cycle.osm.testpbf  ribe_slice.osm.testpbf  temp.txt  test_data.osm.testpbf
(+30 files in other folders)
