[package]
name = "rust_osm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
osmpbfreader = "0.16.1"
prost-types = "0.12.3"
rayon = "1.8.1"
rmp-serde = "1.1.2"
serde = "1.0.196"
serde_json = "1.0.113"

